# anda-db

./: .gitignore  Cargo.toml  README.md  tfs_demo.cbor.zst
docs/: anda-lql-v1.md  anda-lql-v1_cn.md
py/: .gitignore  pyproject.toml
py/anda_cognitive_nexus_py/: Cargo.toml  README.md
py/anda_cognitive_nexus_py/examples/: test_kip_stateful_execution.rs
py/anda_cognitive_nexus_py/src/: lib.rs
py/anda_cognitive_nexus_py/tests_py/: requirements.txt  test_anda_py.py  test_bindings.py
py/anda_py/: .gitignore  Cargo.toml  README.md
py/anda_py/examples/: test_kip_stateful_execution.rs
py/anda_py/src/: lib.rs
py/anda_py/tests_py/: test_anda_py.py  test_bindings.py
rs/anda_cognitive_nexus/: Cargo.toml  README.md
rs/anda_cognitive_nexus/examples/: kip_demo.rs
rs/anda_cognitive_nexus/src/: db.rs  entity.rs  helper.rs  lib.rs  types.rs
rs/anda_db/: Cargo.toml  README.md
rs/anda_db/examples/: db_demo.rs
rs/anda_db/src/: collection.rs  database.rs  error.rs  lib.rs  query.rs  schema.rs  storage.rs
rs/anda_db/src/index/: bm25.rs  btree.rs  hnsw.rs  mod.rs
rs/anda_db/src/schema/: document.rs  error.rs  field.rs  mod.rs  resource.rs  schema.rs  segment.rs
rs/anda_db_btree/: Cargo.toml  README.md
rs/anda_db_btree/examples/: btree_demo.rs
rs/anda_db_btree/src/: btree.rs  error.rs  lib.rs
rs/anda_db_derive/: Cargo.toml  README.md
rs/anda_db_derive/src/: common.rs  field_typed.rs  lib.rs  schema.rs
rs/anda_db_derive/tests/: anda_db_schema_derive.rs  derive.rs  field_typed_derive.rs
rs/anda_db_hnsw/: Cargo.toml  README.md
rs/anda_db_hnsw/examples/: demo.rs  hnsw_demo.rs
rs/anda_db_hnsw/src/: distance.rs  error.rs  hnsw.rs  lib.rs
rs/anda_db_schema/: Cargo.toml  README.md
rs/anda_db_schema/src/: document.rs  error.rs  field.rs  lib.rs  resource.rs  schema.rs  segment.rs  value_serde.rs
rs/anda_db_tfs/: Cargo.toml  README.md
rs/anda_db_tfs/benches/: tfs_tokenizer.rs
rs/anda_db_tfs/examples/: tfs_demo.rs
rs/anda_db_tfs/src/: bm25.rs  error.rs  lib.rs  query.rs  tokenizer.rs
rs/anda_db_utils/: Cargo.toml  README.md
rs/anda_db_utils/src/: cbor_size.rs  lib.rs
rs/anda_kip/: Cargo.toml  FunctionDefinition.json  README.md  SystemInstructions.md  SystemPrompt.md
rs/anda_kip/capsules/: Event.kip  Genesis.kip  Person.kip
rs/anda_kip/capsules/persons/: self.kip  system.kip
rs/anda_kip/examples/: kip_demo.rs
rs/anda_kip/src/: ast.rs  capsule.rs  error.rs  executor.rs  lib.rs  nexus.rs  parser.rs  request.rs  response.rs  types.rs
rs/anda_kip/src/parser/: common.rs  json.rs  kml.rs  kql.rs  meta.rs
rs/anda_object_store/: Cargo.toml  README.md
rs/anda_object_store/src/: encryption.rs  lib.rs
