[workspace]
resolver = "2"
members = ["rs/*"]

[workspace.package]
description = "An database for AI Agents built with Object Store."
repository = "https://github.com/ldclabs/anda_db"
homepage = "https://github.com/ldclabs/anda_db"
keywords = ["ai-agent", "object_store", "hnsw", "database"]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
const-hex = "1.14"
croaring = "2.3"
futures = { version = "0.3" }
tokio = { version = "1.44" }
tokio-util = { version = "0.7" }
ciborium = "0.2"
dashmap = "6.1"
rand = "0.9"
rayon = "1.10"
ordered-float = "5.0"
half = { version = "2.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
log = { version = "0.4", features = ["kv_serde"] }
tantivy-tokenizer-api = "0.3"
tantivy = "0.22"
tantivy-jieba = "0.11"
structured-logger = "1"
smallvec = "1.14"
criterion = "0.5"
ic_auth_types = { version = "0.2" }
object_store = { version = "0.12" }
moka = { version = "0.12", features = ["future"] }
pin-project-lite = "0.2"
zstd-safe = "7"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
unicode-segmentation = "1"
