[package]
name = "anda_cognitive_nexus"
version = "0.2.1"
description = "A Rust implementation of KIP (Knowledge Interaction Protocol) base on Anda DB."
keywords = ["KIP", "KAG", "Knowledge", "AGI-Memory", "AI-Agent"]
categories = ["database", "data-structures", "text-processing"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_cognitive_nexus"
publish = true
edition.workspace = true
license.workspace = true

[dependencies]
anda_db_utils = { version = "0.1", path = "../anda_db_utils" }
anda_kip = { version = "0.5", path = "../anda_kip" }
anda_db = { version = "0.4", path = "../anda_db", features = ["full"] }
anda_db_schema = { version = "0.2", path = "../anda_db_schema" }
anda_db_tfs = { version = "0.4", path = "../anda_db_tfs", features = ["full"] }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anda_object_store = { path = "../anda_object_store", version = "0.1" }
tokio = { workspace = true, features = ["full"] }
object_store = { workspace = true }
structured-logger = { workspace = true }

[[example]]
name = "kip_demo"
