[package]
name = "anda_db_btree"
description = "A B-tree index library in Rust."
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_btree"
version = "0.2.1"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ciborium = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
const-hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "btree_demo"
