[package]
name = "anda_db_btree"
description = "A B-tree index library in Rust."
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_btree"
version = "0.4.6"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_db_utils = { version = "0.2", path = "../anda_db_utils" }
ciborium = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "btree_demo"
