[package]
name = "anda_db_derive"
description = "A Rust procedural macro crate that provides derive macros for AndaDB schema types."
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_derive"
version = "0.2.4"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
anda_db_schema = { path = "../anda_db_schema" }
half = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ic_auth_types = { workspace = true }
