[package]
name = "anda_db_hnsw"
description = "A high-performance vector search library in Rust."
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_hnsw"
version = "0.3.0"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ciborium = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
futures = { workspace = true }
rand = { workspace = true }
ordered-float = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde", "const_new"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
structured-logger = { workspace = true }
