[package]
name = "anda_db_schema"
version = "0.3.1"
description = "Anda DB schema library for Rust."
keywords = ["database", "vector", "search", "embedding", "ai"]
categories = ["database", "data-structures", "text-processing"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_schema"
publish = true
edition.workspace = true
license.workspace = true

[dependencies]
anda_db_derive = { path = "../anda_db_derive", version = "0.2" }
base64 = { workspace = true }
ciborium = { workspace = true }
ic_auth_types = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
ic_auth_types = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde_bytes"]
