[package]
name = "anda_db_utils"
version = "0.2.0"
description = "An utility Rust library for Anda DB."
keywords = ["anda"]
categories = ["database", "data-structures"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_utils"
publish = true
edition.workspace = true
license.workspace = true

[dependencies]
ciborium = { workspace = true }
half = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
