[package]
name = "anda_kip"
version = "0.5.0"
description = "A Rust SDK of KIP (Knowledge Interaction Protocol) for building sustainable AI knowledge memory systems."
keywords = ["KIP", "Knowledge", "Memory", "Graph", "Agent"]
categories = ["database", "data-structures", "text-processing"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_kip"
publish = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
